# NLP

./: README.md  debug_matcher.py  final_test_output.txt  pyproject.toml  requirements.txt  test_master_prompt.py
data/: sample_conversation.txt
outputs/: analysis_result.json
src/: app.py  bert_manager.py  empathy.py  intent.py  ner.py  pipeline.py  product.py  sentiment.py
templates/: index.html
