[project]
name = "conversation-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
